style: layout align fix

--- a/src/app/task-board/task-board.component.scss
+++ b/src/app/task-board/task-board.component.scss
@@ -9,7 +9,7 @@
 
 .list-container {
   display: flex;
-  justify-content: space-evenly;
+  justify-content: space-between;
 }
 
 tb-tasks-list {
